# Chess3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ChessObject.hpp  ChessPiece.hpp  Chessboard.hpp  GLBuffersID.hpp  ObjectType.hpp  RawTextureData.hpp  RawVertexData.hpp  SceneManager.hpp  Shader.hpp  Square.hpp  Team.hpp  VertexData.hpp  ViewController.hpp
include/enumerations/: MeshTypes.hpp  TextureTypes.hpp
resources/Chess_Pieces/: Chess_Pieces.mtl
resources/Stone_Chess_Board/: Chess_Board.mtl
src/: ChessObject.cpp  ChessPiece.cpp  Chessboard.cpp  GLBuffersID.cpp  SceneManager.cpp  Shader.cpp  Square.cpp  ViewController.cpp  main.cpp
src/shaders/: fragmentShader.glsl
